各種圧縮丸石のツールを追加

--- a/src/main/resources/assets/miningmod/lang/en_US.lang
+++ b/src/main/resources/assets/miningmod/lang/en_US.lang
@@ -50,4 +50,73 @@ text.stonepickaxe.12.stackname=Compressed Stone Pickaxe (Tier13)
 text.stonepickaxe.13.stackname=Compressed Stone Pickaxe (Tier14)
 text.stonepickaxe.14.stackname=Compressed Stone Pickaxe (Tier15)
 text.stonepickaxe.15.stackname=Compressed Stone Pickaxe (Tier16)
+
+text.stoneshovel.0.stackname=Compressed Stone Shovel (Tier1)
+text.stoneshovel.1.stackname=Compressed Stone Shovel (Tier2)
+text.stoneshovel.2.stackname=Compressed Stone Shovel (Tier3)
+text.stoneshovel.3.stackname=Compressed Stone Shovel (Tier4)
+text.stoneshovel.4.stackname=Compressed Stone Shovel (Tier5)
+text.stoneshovel.5.stackname=Compressed Stone Shovel (Tier6)
+text.stoneshovel.6.stackname=Compressed Stone Shovel (Tier7)
+text.stoneshovel.7.stackname=Compressed Stone Shovel (Tier8)
+text.stoneshovel.8.stackname=Compressed Stone Shovel (Tier9)
+text.stoneshovel.9.stackname=Compressed Stone Shovel (Tier10)
+text.stoneshovel.10.stackname=Compressed Stone Shovel (Tier11)
+text.stoneshovel.11.stackname=Compressed Stone Shovel (Tier12)
+text.stoneshovel.12.stackname=Compressed Stone Shovel (Tier13)
+text.stoneshovel.13.stackname=Compressed Stone Shovel (Tier14)
+text.stoneshovel.14.stackname=Compressed Stone Shovel (Tier15)
+text.stoneshovel.15.stackname=Compressed Stone Shovel (Tier16)
+
+text.stoneaxe.0.stackname=Compressed Stone Axe (Tier1)
+text.stoneaxe.1.stackname=Compressed Stone Axe (Tier2)
+text.stoneaxe.2.stackname=Compressed Stone Axe (Tier3)
+text.stoneaxe.3.stackname=Compressed Stone Axe (Tier4)
+text.stoneaxe.4.stackname=Compressed Stone Axe (Tier5)
+text.stoneaxe.5.stackname=Compressed Stone Axe (Tier6)
+text.stoneaxe.6.stackname=Compressed Stone Axe (Tier7)
+text.stoneaxe.7.stackname=Compressed Stone Axe (Tier8)
+text.stoneaxe.8.stackname=Compressed Stone Axe (Tier9)
+text.stoneaxe.9.stackname=Compressed Stone Axe (Tier10)
+text.stoneaxe.10.stackname=Compressed Stone Axe (Tier11)
+text.stoneaxe.11.stackname=Compressed Stone Axe (Tier12)
+text.stoneaxe.12.stackname=Compressed Stone Axe (Tier13)
+text.stoneaxe.13.stackname=Compressed Stone Axe (Tier14)
+text.stoneaxe.14.stackname=Compressed Stone Axe (Tier15)
+text.stoneaxe.15.stackname=Compressed Stone Axe (Tier16)
+
+text.stonesword.0.stackname=Compressed Stone Sword (Tier1)
+text.stonesword.1.stackname=Compressed Stone Sword (Tier2)
+text.stonesword.2.stackname=Compressed Stone Sword (Tier3)
+text.stonesword.3.stackname=Compressed Stone Sword (Tier4)
+text.stonesword.4.stackname=Compressed Stone Sword (Tier5)
+text.stonesword.5.stackname=Compressed Stone Sword (Tier6)
+text.stonesword.6.stackname=Compressed Stone Sword (Tier7)
+text.stonesword.7.stackname=Compressed Stone Sword (Tier8)
+text.stonesword.8.stackname=Compressed Stone Sword (Tier9)
+text.stonesword.9.stackname=Compressed Stone Sword (Tier10)
+text.stonesword.10.stackname=Compressed Stone Sword (Tier11)
+text.stonesword.11.stackname=Compressed Stone Sword (Tier12)
+text.stonesword.12.stackname=Compressed Stone Sword (Tier13)
+text.stonesword.13.stackname=Compressed Stone Sword (Tier14)
+text.stonesword.14.stackname=Compressed Stone Sword (Tier15)
+text.stonesword.15.stackname=Compressed Stone Sword (Tier16)
+
+text.stonehoe.0.stackname=Compressed Stone Hoe (Tier1)
+text.stonehoe.1.stackname=Compressed Stone Hoe (Tier2)
+text.stonehoe.2.stackname=Compressed Stone Hoe (Tier3)
+text.stonehoe.3.stackname=Compressed Stone Hoe (Tier4)
+text.stonehoe.4.stackname=Compressed Stone Hoe (Tier5)
+text.stonehoe.5.stackname=Compressed Stone Hoe (Tier6)
+text.stonehoe.6.stackname=Compressed Stone Hoe (Tier7)
+text.stonehoe.7.stackname=Compressed Stone Hoe (Tier8)
+text.stonehoe.8.stackname=Compressed Stone Hoe (Tier9)
+text.stonehoe.9.stackname=Compressed Stone Hoe (Tier10)
+text.stonehoe.10.stackname=Compressed Stone Hoe (Tier11)
+text.stonehoe.11.stackname=Compressed Stone Hoe (Tier12)
+text.stonehoe.12.stackname=Compressed Stone Hoe (Tier13)
+text.stonehoe.13.stackname=Compressed Stone Hoe (Tier14)
+text.stonehoe.14.stackname=Compressed Stone Hoe (Tier15)
+text.stonehoe.15.stackname=Compressed Stone Hoe (Tier16)
+
 text.cirno.text=⑨⑨⑨⑨⑨⑨⑨⑨⑨⑨⑨⑨⑨⑨
