--- a/src/main/resources/assets/miningmod/lang/ja_JP.lang
+++ b/src/main/resources/assets/miningmod/lang/ja_JP.lang
@@ -50,4 +50,73 @@ text.stonepickaxe.12.stackname=圧縮丸石のツルハシ (Tier13)
 text.stonepickaxe.13.stackname=圧縮丸石のツルハシ (Tier14)
 text.stonepickaxe.14.stackname=圧縮丸石のツルハシ (Tier15)
 text.stonepickaxe.15.stackname=圧縮丸石のツルハシ (Tier16)
+
+text.stoneshovel.0.stackname=圧縮丸石のシャベル (Tier1)
+text.stoneshovel.1.stackname=圧縮丸石のシャベル (Tier2)
+text.stoneshovel.2.stackname=圧縮丸石のシャベル (Tier3)
+text.stoneshovel.3.stackname=圧縮丸石のシャベル (Tier4)
+text.stoneshovel.4.stackname=圧縮丸石のシャベル (Tier5)
+text.stoneshovel.5.stackname=圧縮丸石のシャベル (Tier6)
+text.stoneshovel.6.stackname=圧縮丸石のシャベル (Tier7)
+text.stoneshovel.7.stackname=圧縮丸石のシャベル (Tier8)
+text.stoneshovel.8.stackname=圧縮丸石のシャベル (Tier9)
+text.stoneshovel.9.stackname=圧縮丸石のシャベル (Tier10)
+text.stoneshovel.10.stackname=圧縮丸石のシャベル (Tier11)
+text.stoneshovel.11.stackname=圧縮丸石のシャベル (Tier12)
+text.stoneshovel.12.stackname=圧縮丸石のシャベル (Tier13)
+text.stoneshovel.13.stackname=圧縮丸石のシャベル (Tier14)
+text.stoneshovel.14.stackname=圧縮丸石のシャベル (Tier15)
+text.stoneshovel.15.stackname=圧縮丸石のシャベル (Tier16)
+
+text.stoneaxe.0.stackname=圧縮丸石の斧 (Tier1)
+text.stoneaxe.1.stackname=圧縮丸石の斧 (Tier2)
+text.stoneaxe.2.stackname=圧縮丸石の斧 (Tier3)
+text.stoneaxe.3.stackname=圧縮丸石の斧 (Tier4)
+text.stoneaxe.4.stackname=圧縮丸石の斧 (Tier5)
+text.stoneaxe.5.stackname=圧縮丸石の斧 (Tier6)
+text.stoneaxe.6.stackname=圧縮丸石の斧 (Tier7)
+text.stoneaxe.7.stackname=圧縮丸石の斧 (Tier8)
+text.stoneaxe.8.stackname=圧縮丸石の斧 (Tier9)
+text.stoneaxe.9.stackname=圧縮丸石の斧 (Tier10)
+text.stoneaxe.10.stackname=圧縮丸石の斧 (Tier11)
+text.stoneaxe.11.stackname=圧縮丸石の斧 (Tier12)
+text.stoneaxe.12.stackname=圧縮丸石の斧 (Tier13)
+text.stoneaxe.13.stackname=圧縮丸石の斧 (Tier14)
+text.stoneaxe.14.stackname=圧縮丸石の斧 (Tier15)
+text.stoneaxe.15.stackname=圧縮丸石の斧 (Tier16)
+
+text.stonesword.0.stackname=圧縮丸石の剣 (Tier1)
+text.stonesword.1.stackname=圧縮丸石の剣 (Tier2)
+text.stonesword.2.stackname=圧縮丸石の剣 (Tier3)
+text.stonesword.3.stackname=圧縮丸石の剣 (Tier4)
+text.stonesword.4.stackname=圧縮丸石の剣 (Tier5)
+text.stonesword.5.stackname=圧縮丸石の剣 (Tier6)
+text.stonesword.6.stackname=圧縮丸石の剣 (Tier7)
+text.stonesword.7.stackname=圧縮丸石の剣 (Tier8)
+text.stonesword.8.stackname=圧縮丸石の剣 (Tier9)
+text.stonesword.9.stackname=圧縮丸石の剣 (Tier10)
+text.stonesword.10.stackname=圧縮丸石の剣 (Tier11)
+text.stonesword.11.stackname=圧縮丸石の剣 (Tier12)
+text.stonesword.12.stackname=圧縮丸石の剣 (Tier13)
+text.stonesword.13.stackname=圧縮丸石の剣 (Tier14)
+text.stonesword.14.stackname=圧縮丸石の剣 (Tier15)
+text.stonesword.15.stackname=圧縮丸石の剣 (Tier16)
+
+text.stonehoe.0.stackname=圧縮丸石のクワ (Tier1)
+text.stonehoe.1.stackname=圧縮丸石のクワ (Tier2)
+text.stonehoe.2.stackname=圧縮丸石のクワ (Tier3)
+text.stonehoe.3.stackname=圧縮丸石のクワ (Tier4)
+text.stonehoe.4.stackname=圧縮丸石のクワ (Tier5)
+text.stonehoe.5.stackname=圧縮丸石のクワ (Tier6)
+text.stonehoe.6.stackname=圧縮丸石のクワ (Tier7)
+text.stonehoe.7.stackname=圧縮丸石のクワ (Tier8)
+text.stonehoe.8.stackname=圧縮丸石のクワ (Tier9)
+text.stonehoe.9.stackname=圧縮丸石のクワ (Tier10)
+text.stonehoe.10.stackname=圧縮丸石のクワ (Tier11)
+text.stonehoe.11.stackname=圧縮丸石のクワ (Tier12)
+text.stonehoe.12.stackname=圧縮丸石のクワ (Tier13)
+text.stonehoe.13.stackname=圧縮丸石のクワ (Tier14)
+text.stonehoe.14.stackname=圧縮丸石のクワ (Tier15)
+text.stonehoe.15.stackname=圧縮丸石のクワ (Tier16)
+
 text.cirno.text=あたいったら最強ね!
